@@ -250,6 +250,14 @@
 			<code>org.eclipse.sirius</code>
 		</h4>
 		<ul>
+			<li><span class="label label-success">Added</span> The class 
+				<code>org.eclipse.sirius.business.api.query.SiriusReferenceFinderCache</code> has been added. This cache allows to avoid redundant computing to find impacted DRepresentationDescriptors returned by 
+				<code>org.eclipse.sirius.business.api.query.SiriusReferenceFinder.getImpactedRepresentationDescriptors</code>.
+			</li>
+			<li><span class="label label-success">Added</span> 
+				<code>org.eclipse.sirius.business.api.query.SiriusReferenceFinder.CACHE</code> is a convenience to use 
+				<code>org.eclipse.sirius.business.api.query.SiriusReferenceFinderCache</code>.
+			</li>
 			<li><span class="label label-info">Modified</span> 
 				<code>org.eclipse.sirius.viewpoint.SiriusPlugin</code> has been renamed to 
 				<code>org.eclipse.sirius.tools.api.SiriusPlugin</code>
