@@ -83,6 +83,9 @@
 			<li>
 				<code>org.eclipse.sirius.diagram.tools.api.Messages_BringElementsToFront_severalElementsLabel</code>
 			</li>
+			<li>
+				<code>org.eclipse.sirius.tools.api.Messages.ReferenceFinderCache_warningAlreadyEnabled</code>
+			</li>
 		</ul>
 		<h3 id="MessageKeysRemoved">Message Keys Removed</h3>
 		<ul>
