@@ -27,6 +27,7 @@ h3. Message Keys Added
 * @org.eclipse.sirius.diagram.tools.api.Messages_BringElementsForward_wrongIndex@
 * @org.eclipse.sirius.diagram.tools.api.Messages_BringElementsToFront_oneElementLabel@
 * @org.eclipse.sirius.diagram.tools.api.Messages_BringElementsToFront_severalElementsLabel@
+* @org.eclipse.sirius.tools.api.Messages.ReferenceFinderCache_warningAlreadyEnabled@
 
 h3. Message Keys Removed
 
