@@ -1,5 +1,5 @@
 # ====================================================================
-# Copyright (c) 2007, 2021 THALES GLOBAL SERVICES and others
+# Copyright (c) 2007, 2022 THALES GLOBAL SERVICES and others
 # This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
 # which accompanies this distribution, and is available at
@@ -242,6 +242,7 @@ MoveRepresentationCommand_label = Move representation to {0}
 NoNullResourceCommand_instanceErrorMsg = only instances of SiriusCommand are allowed for recording command
 NotificationTask_label = notification task
 PrepareNewAnalysisCommand_label = Prepare new Analysis
+ReferenceFinderCache_warningAlreadyEnabled = The ReferenceFinderCache is already in use in another context, it may be cleared when other processes that use it will disable it.
 RefreshHelper_notNullPredicate = The predicate cannot be null.
 RefreshImpactedElementsCommand_label = Refresh impacted representation elements
 RefreshRepresentationsCommand_label = Refresh representation
