@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2017 Obeo.
+ * Copyright (c) 2017, 2022 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -36,6 +36,12 @@ import org.eclipse.sirius.viewpoint.DRepresentationElement;
  *
  */
 public interface SiriusReferenceFinder {
+
+    /**
+     * The cache used to store the result of methods {@link #getReferencingSiriusElements(Collection, SearchScope)} and
+     * {@link #getImpactedRepresentationDescriptors(Collection, SearchScope)}.
+     */
+    SiriusReferenceFinderCache CACHE = SiriusReferenceFinderCache.INSTANCE;
 
     /**
      * The scope of the research.
