@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2015, 2021 Obeo.
+ * Copyright (c) 2015, 2022 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -479,6 +479,9 @@ public final class Messages {
     @TranslatableMessage
     public static String PrepareNewAnalysisCommand_label;
 
+    @TranslatableMessage
+    public static String ReferenceFinderCache_warningAlreadyEnabled;
+    
     @TranslatableMessage
     public static String RefreshHelper_notNullPredicate;
 
